исправлены названия классов

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <main class="main">
-            <table class="main__table-Brief" id="tableBrief">
-                <thead class="table-Brief__title">
+            <table class="main__table-brief table-brief" id="tableBrief">
+                <thead class="table-brief__title">
                     <tr>
                         <th>Владелец</th>
                         <th>Производитель</th>
@@ -29,7 +29,7 @@
         <text class="main-text">
             Подробная информация:
         </text>
-            <table class="main__table-Extended" id="extendedTable">
+            <table class="main__table-extended table-extended" id="extendedTable">
                 <thead>
                     <tr>
                         <th>Владелец</th>
@@ -50,7 +50,7 @@
                         <td id="year"></td>
                         <td id="type"></td>
                         <td id="color" width="5px" height="5px"></td>
-                        <td><input class="table-Extended__checkbox" id="isConvertible" type="checkbox" disabled></td>
+                        <td><input class="table-extended__checkbox" id="isConvertible" type="checkbox" disabled></td>
                         <td id="vin"></td>
                     </tr>
                 </tbody>
