--- a/index.html
+++ b/index.html
@@ -25,36 +25,38 @@
             <tbody>
             </tbody>
         </table>
-
-        <text class="main-text">
-            Подробная информация:
-        </text>
-        <table class="main__table-extended table-extended" id="extendedTable">
-            <thead>
-                <tr>
-                    <th>Владелец</th>
-                    <th>Производитель</th>
-                    <th>Марка</th>
-                    <th>Год выпуска</th>
-                    <th>Тип кузова</th>
-                    <th>Цвет</th>
-                    <th>Кабриолет</th>
-                    <th>Номер кузова</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td id="person"></td>
-                    <td id="manufacturer"></td>
-                    <td id="model"></td>
-                    <td id="year"></td>
-                    <td id="type"></td>
-                    <td id="color" width="5px" height="5px"></td>
-                    <td><input class="table-extended__checkbox" id="isConvertible" type="checkbox" disabled></td>
-                    <td id="vin"></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="main-detail detail-block">
+            <text class="detail-block__text">
+                Подробная информация:
+            </text>
+            <table class="detail-block__table table-extended" id="extendedTable">
+                <thead>
+                    <tr>
+                        <th>Владелец</th>
+                        <th>Производитель</th>
+                        <th>Марка</th>
+                        <th>Год выпуска</th>
+                        <th>Тип кузова</th>
+                        <th>Цвет</th>
+                        <th>Кабриолет</th>
+                        <th>Номер кузова</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td id="person"></td>
+                        <td id="manufacturer"></td>
+                        <td id="model"></td>
+                        <td id="year"></td>
+                        <td id="type"></td>
+                        <td id="color" width="5px" height="5px"></td>
+                        <td><input class="table-extended__checkbox" id="isConvertible" type="checkbox" disabled></td>
+                        <td id="vin"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
     </main>
 </body>
 </html>
