Изменено имя класса

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <tbody>
             </tbody>
         </table>
-        <div class="main-detail detail-block">
+        <div class="main__detail detail-block">
             <text class="detail-block__text">
                 Подробная информация:
             </text>
