--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/table.css">
     <link rel="stylesheet" href="styles/text.css">
-    <script defer src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
-    <script defer type="module" src="readJSON.js"></script>
+    <script>var exports = {};</script>
+    <script type="module" src="/js/typescript/readJSON.js"></script>
 </head>
 <body>
     <main class="main">
